[gd_scene load_steps=3 format=3 uid="uid://b7u0cgqvbb17h"]

[ext_resource type="Script" uid="uid://d28dmnk78xcl8" path="res://exit_menu.gd" id="1_1gnor"]
[ext_resource type="Theme" uid="uid://cjx3jojv5j0w1" path="res://da-theme.tres" id="1_jedsv"]

[node name="ExitMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1gnor")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -181.0
offset_right = 500.0
offset_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/separation = 39

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_jedsv")

[node name="ExitGame" type="Button" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "EXIT"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_jedsv")

[node name="ReturnToGame" type="Button" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "RETURN"
